Render content with style/script

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,4 @@
-<link href="assets/css/style.css" rel="stylesheet" type="text/css">
+<style>body {margin: 0;}</style>
 {% block css %}{% endblock %}
 {% block content %}{% endblock %}
 {% block javascript %}{% endblock %}
