--- a/templates/_markdown.html.twig
+++ b/templates/_markdown.html.twig
@@ -1,8 +1,8 @@
 {% extends "base.html.twig" %}
-
 {% block css %}
-    <link href="assets/css/markdown.css" rel="stylesheet" type="text/css">
-    <link href="assets/css/prism.css" rel="stylesheet" type="text/css">
+    {% for content in css %}
+        <style>{{ content|raw }}</style>
+    {% endfor %}
 {% endblock %}
 
 {% block content %}
@@ -12,5 +12,7 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src="assets/js/prism.js" type="text/javascript"></script>
+    {% for content in javascripts %}
+        <script>{{ content|raw }}</script>
+    {% endfor %}
 {% endblock %}
