Render text in Iframe for security context

--- a/templates/_text.html.twig
+++ b/templates/_text.html.twig
@@ -1,5 +1,14 @@
 {% extends "base.html.twig" %}
 
-{% block content %}
-    {{ file.content|raw }}
+{% block css %}
+    <style>
+        #iframe {
+            min-height: 50vh;
+        }
+    </style>
 {% endblock %}
+
+{% block content %}
+    <iframe id="iframe" src="{{ file.path }}" frameborder="0" width="100%" height="100%"></iframe>
+{% endblock %}
+
