--- a/templates/_video.html.twig
+++ b/templates/_video.html.twig
@@ -1,19 +1,8 @@
 {% extends "base.html.twig" %}
 
-{% block css %}
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.5.10/plyr.css" />
-{% endblock %}
-
 {% block content %}
-    <video id="player" width="100%" height="100%" controls>
+    <video width="100%" height="100%" controls>
         <source src="{{ file.path }}" type="{{ file.mimeType }}">
         Your browser does not support the video tag.
     </video>
-{% endblock %}
-
-{% block javascript %}
-    <script src="https://cdn.plyr.io/3.5.10/plyr.js"></script>
-    <script>
-        const player = new Plyr('#player');
-    </script>
 {% endblock %}
