--- a/templates/_video.html.twig
+++ b/templates/_video.html.twig
@@ -1,8 +1,23 @@
 {% extends "base.html.twig" %}
 
+{% block css %}
+    {% for content in css %}
+        <style>{{ content|raw }}</style>
+    {% endfor %}
+{% endblock %}
+
 {% block content %}
-    <video width="100%" height="100%" controls>
+    <video id="player" width="100%" height="100%" controls playsinline>
         <source src="{{ file.path }}" type="{{ file.mimeType }}">
         Your browser does not support the video tag.
     </video>
+{% endblock %}
+
+{% block javascript %}
+    {% for content in javascripts %}
+        <script>{{ content|raw }}</script>
+    {% endfor %}
+    <script>
+        const player = new Plyr('#player');
+    </script>
 {% endblock %}
