--- a/templates/_text.html.twig
+++ b/templates/_text.html.twig
@@ -1,5 +1,15 @@
 {% extends "base.html.twig" %}
 
+{% block css %}
+    <style>
+        #text-content {
+            margin: 1rem;
+        }
+    </style>
+{% endblock %}
+
 {% block content %}
-    {{ file.content|raw }}
+    <div class="text-content">
+        {{ file.content|raw }}
+    </div>
 {% endblock %}
