Show file text content

--- a/templates/_text.html.twig
+++ b/templates/_text.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="text-content">
+    <div id="text-content">
         {{ file.content|raw }}
     </div>
 {% endblock %}
