--- a/templates/_code.html.twig
+++ b/templates/_code.html.twig
@@ -16,6 +16,7 @@
     <script>
         var myCodeMirror = CodeMirror.fromTextArea(document.getElementById('code-content'), {
             readOnly: true,
+            lineNumbers: true
         });
     </script>
 {% endblock %}
