--- a/templates/_download.html.twig
+++ b/templates/_download.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 {% block css %}
     <style>
-        .download-content {
+        .center {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -33,6 +33,11 @@
 
 {% block content %}
     <div class="download-content">
-        <a href="{{ file.path }}" class="download" style="background-color:#42cc8c;">Download</a>
+        {% if message %}
+            <p class="center">{{ message }}</p>
+        {% endif %}
+        <div class="center">
+            <a href="{{ file.path }}" class="download" style="background-color:#42cc8c;">Download</a>
+        </div>
     </div>
 {% endblock %}
